# second-brain

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yaml
data/: sb_config.toml
examples/: sb_config.toml
nix/: build.nix  devenv.nix  devshell.nix
src/: app.rs  app_config.rs  cli.rs  config.rs  config_file.rs  errors.rs  lib.rs  main.rs  periodic.rs  periodic_config.rs  writer.rs
src/app_config/: de.rs  mod.rs  test_cases.rs  test_configs.rs  tests.rs
src/config/: app_config.rs  config_file.rs  de.rs  math.rs  mod.rs
