[package]
name = "second-brain"
version = "0.1.3"
edition = "2024"
description = "Remembering so you don't have to: simple CLI to quickly access Obsidian vaults in the terminal."

[[bin]]
name = "second-brain"
path = "src/main.rs"

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.224", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.16"
toml = "0.9.6"
