[package]
name = "second-brain"
version = "0.3.2"
edition = "2024"
description = "Remembering so you don't have to: simple CLI to quickly access Obsidian vaults in the terminal."

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.224", features = ["derive"] }
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.16"
toml = "1.0.0"
